[package]
name = "unix-fd"
version = "0.0.2"
authors = ["Enrico Scholz <enrico.scholz@sigma-chemnitz.de>"]
edition = "2018"

license = "LGPL-3.0"
description = "Unix filedescriptor related utilities"

categories = ["filesystem", "os::unix-apis"]
keywords = ["fd", "chroot", "openat"]

repository = "https://github.com/ensc/unix-fd.git"

[dependencies]
errno = "0.2"
libc = "0.2"
log = "0.4"
error-chain = "0.12"

[dev-dependencies]
tempdir = "0.3"
env_logger = "0.9"

[features]
atomic-rc = []
